--- a/signin.html
+++ b/signin.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <link href="css/signin.css" rel="stylesheet" />
+    <title>Sign In</title>
 </head>
 
 <body>
-    <h2>login hai</h2>
+
 </body>
 
 </html>
