finish sign in & sign up

--- a/signup.html
+++ b/signup.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In</title>
-    <link rel="stylesheet" href="css/signin.css">
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="css/singup.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
@@ -23,8 +23,20 @@
         <div class="right">
             <img class="logo2" src="img/logo2.png" alt="">
             <form action="">
-                <h1>Sign In</h1>
-                <p>Sign in with your data that you entered during your registration</p>
+                <h1>Sign Up</h1>
+                <p>Fill your additional detils.</p>
+                <div>
+                    <label for="">First Name</label>
+                    <input type="text" placeholder="Write your first name">
+                </div>
+                <div>
+                    <label for="">Last Name</label>
+                    <input type="text" placeholder="Write your last name">
+                </div>
+                <div>
+                    <label for="">Phone Number</label>
+                    <input type="text" placeholder="Write your phone number">
+                </div>
                 <div>
                     <label for="">Email</label>
                     <input type="text" placeholder="Write your email">
@@ -36,12 +48,9 @@
                     </span>
                     <input type="password" placeholder="Write your password">
                 </div>
-                <button>Sign In</button>
-                <p class="forgot-pass">
-                    Forgot your password? <a href="#">Reset now</a>
-                </p>
-                <p class="signup">
-                    Don't have an account? <a href="signup.html">Sign up</a>
+                <button>Sign Up</button>
+                <p class="signin">
+                    Already have account? <a href="signin.html">Sign In</a>
                 </p>
             </form>
         </div>
