finish home dekstop

--- a/index.html
+++ b/index.html
@@ -3,12 +3,177 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <h2>this is home</h2>
+    <div class="container">
+        <header>
+            <div class="left">
+                <img class="logo2" src="img/logo2.png" alt="">
+            </div>
+            <div class="right">
+                <div class="header-bar">
+                    <a href="index.html">Home</a>
+                    <a href="index.html">List Movie</a>
+                </div>
+                <div>
+                    <button class="signup"><a href="signup.html" style="flex-grow: 8;">Sign Up</a></button>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="content-1">
+                <div class="left">
+                    <p>Nearest Cinema, Newest Movie,</p>
+                    <h1>Find out now!</h1>
+                </div>
+                <div class="right">
+                    <img style="align-self: flex-end;filter: drop-shadow(5px 5px 5px #222);" src="img/home1.png" alt="">
+                    <img style="align-self: center; margin-left: 20px; margin-right: 20px;filter: drop-shadow(5px 5px 5px #222);"
+                        src="img/home2.png" alt="">
+                    <img style="align-self: flex-start;filter: drop-shadow(5px 5px 5px #222);" src="img/home3.png"
+                        alt="">
+                </div>
+            </section>
+            <section class="content-2">
+                <div class="top">
+                    <h2>Now Showing</h2>
+                    <a href="">view all</a>
+                </div>
+                <div class="bottom">
+                    <img src="img/1.png" alt="">
+                    <img src="img/2.png" alt="">
+                    <img src="img/3.png" alt="">
+                    <img src="img/4.png" alt="">
+                    <img src="img/5.png" alt="">
+                </div>
+            </section>
+            <section class="content-3">
+                <div class="top">
+                    <h2>Upcoming Movie</h2>
+                    <a href="">view all</a>
+                </div>
+                <div class="mid">
+                    <button>September</button>
+                    <button>October</button>
+                    <button>November</button>
+                    <button>December</button>
+                    <button>January</button>
+                    <button>February</button>
+                    <button>March</button>
+                    <button>April</button>
+                </div>
+                <div class="bottom">
+                    <div class="card-movie">
+                        <img src="img/1.png" alt="">
+                        <div>
+                            <h5>Spider-Man</h5>
+                            <p>Adventure, Action, Sci-Fi</p>
+                            <button>Details</button>
+                        </div>
+                    </div>
+                    <div class="card-movie">
+                        <img src="img/2.png" alt="">
+                        <div>
+                            <h5>lion King</h5>
+                            <p>AdventureSci-Fi</p>
+                            <button>Details</button>
+                        </div>
+                    </div>
+                    <div class="card-movie">
+                        <img src="img/3.png" alt="">
+                        <div>
+                            <h5>John 3 Wick</h5>
+                            <p>Action, Sci-Fi</p>
+                            <button>Details</button>
+                        </div>
+                    </div>
+                    <div class="card-movie">
+                        <img src="img/4.png" alt="">
+                        <div>
+                            <h5>Black Widow</h5>
+                            <p>Adventure, Action, Sci-Fi</p>
+                            <button>Details</button>
+                        </div>
+                    </div>
+                    <div class="card-movie">
+                        <img src="img/5.png" alt="">
+                        <div>
+                            <h5>The Witches</h5>
+                            <p>Adventure, Action, Sci-Fi</p>
+                            <button>Details</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="content-4">
+                <div class="card">
+                    <div class="top">
+                        <p>Be the vanguard of the</p>
+                        <h1>Moviegoers</h1>
+                    </div>
+                    <div class="mid">
+                        <input type="text" placeholder="Type your email"><button>Join now</button>
+                    </div>
+                    <div class="bottom">
+                        <p>By joining you as a Tickitz member,<br>we will always send you the lastes update via email.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="information">
+                <div class="footer-item1">
+                    <img class="logo2" src="img/logo2.png" alt="">
+                    <p>Stop waiting in line. Buy tickets conveniently, watch movies quietly.</p>
+                </div>
+                <div class="footer-item2">
+                    <p class="title">Explore</p>
+                    <div>
+                        <p><a href="index.html">Home</a></p>
+                        <p><a href="">List Movie</a></p>
+                    </div>
+                </div>
+                <div class="footer-item3">
+                    <p class="title">our Sponsor</p>
+                    <div>
+                        <img class="ebu-logo" src="img/ebu.id-logo.png" alt="">
+                        <img class="cine-logo" src="img/cineone21-logo.png" alt="">
+                        <img class="hiflix" src="img/hiflix-logo.png" alt="">
+                    </div>
+                </div>
+                <div class="footer-item4">
+                    <p class="title">Follow us</p>
+                    <div>
+                        <div>
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <a href="">Tickitz Cinema id</a>
+                        </div>
+                        <div>
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <a href="">tickitz.id</a>
+                        </div>
+                        <div>
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <a href="">tickitz.id</a>
+                        </div>
+                        <div>
+                            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                            <a href="">Tickitz Cinema id</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">&copy; 2020 Tickitz. All Rights Reerved.</div>
+        </footer>
+    </div>
 </body>
 
 </html>
