home & home after login finish

--- a/signin.html
+++ b/signin.html
@@ -36,7 +36,7 @@
                     </span>
                     <input type="password" placeholder="Write your password">
                 </div>
-                <button>Sign In</button>
+                <button><a href="home.html">Sign In</a></button>
                 <p class="forgot-pass">
                     Forgot your password? <a href="#">Reset now</a>
                 </p>
