--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/home_login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -21,17 +21,34 @@
                     <a href="index.html">Home</a>
                     <a href="index.html">List Movie</a>
                 </div>
-                <div>
-                    <button class="signup"><a href="signup.html" style="flex-grow: 8;">Sign
-                            Up</a></button>
+                <div class="profile">
+                    <a onclick="click3()"><i id="button_search" class="fa fa-search" aria-hidden="true"></i></a>
+                    <div class="search" id="search">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                        <input type="text" placeholder="Search...">
+                    </div>
+                    <a onclick="click5()">
+                        <img class="profile" src="img/profile.png" alt="">
+                    </a>
                 </div>
-                <a onclick="myFunction()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                <a onclick="click()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+            </div>
+            <div class="nav-desktop" id="nav-desktop">
+                <a href="#" onclick="click6()">Profile</a>
+                <a href="index.html">Logout</a>
             </div>
         </header>
-        <nav id="nav" onclick="myFunction2()">
+        <nav id="nav" onclick="click2()">
+            <div>
+                <div>
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                    <input type="text" placeholder="Search...">
+                </div>
+            </div>
             <p><a class="nav-home" href="">Home</a></p>
             <p><a href="">List Movie</a></p>
             <p><a href="signin.html">Sign In</a></p>
+            <p><a href="index.html">Logout</a></p>
             <p class="cop">&copy; 2020 Tickitz. All Rights Reerved.</p>
         </nav>
         <main>
@@ -224,10 +241,26 @@
     </div>
 </body>
 <script>
-    function myFunction2() {
+    function click5() {
+        document.getElementById("search").style.display = "none";
+        document.getElementById("button_search").style.display = "block";
+        document.getElementById("nav-desktop").style.display = "flex";
+    }
+    function click6() {
+        document.getElementById("nav-desktop").style.display = "none";
+    }
+    function click4() {
+        document.getElementById("search").style.display = "none";
+        document.getElementById("button_search").style.display = "block";
+    }
+    function click3() {
+        document.getElementById("search").style.display = "block";
+        document.getElementById("button_search").style.display = "none";
+    }
+    function click2() {
         document.getElementById("nav").style.display = "none";
     }
-    function myFunction() {
+    function click() {
         document.getElementById("nav").style.display = "flex";
     }
 </script>
