add template header & footer to start developt list & detail movie

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <section class="content-2">
                 <div class="top">
                     <h2>Now Showing</h2>
-                    <a href="">view all</a>
+                    <a href="list_movie.html">view all</a>
                 </div>
                 <div class="bottom">
                     <img class="img1" src="img/1.png" alt="" style="align-self: flex-start">
@@ -104,7 +104,7 @@
             <section class="content-3">
                 <div class="top">
                     <h2>Upcoming Movie</h2>
-                    <a href="">view all</a>
+                    <a href="list_movie.html">view all</a>
                 </div>
                 <div class="mid">
                     <button class="cal1">September</button>
