--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
             </div>
             <div class="right">
                 <div class="header-bar">
-                    <a href="index.html">Home</a>
-                    <a href="index.html">List Movie</a>
+                    <a href="#">Home</a>
+                    <a href="list_movie.html">List Movie</a>
                 </div>
                 <div class="profile">
                     <a onclick="click3()"><i id="button_search" class="fa fa-search" aria-hidden="true"></i></a>
@@ -68,7 +68,7 @@
             <section class="content-2">
                 <div class="top">
                     <h2>Now Showing</h2>
-                    <a href="">view all</a>
+                    <a href="list_movie.html">view all</a>
                 </div>
                 <div class="bottom">
                     <img class="img1" src="img/1.png" alt="" style="align-self: flex-start">
@@ -121,7 +121,7 @@
             <section class="content-3">
                 <div class="top">
                     <h2>Upcoming Movie</h2>
-                    <a href="">view all</a>
+                    <a href="list_movie.html">view all</a>
                 </div>
                 <div class="mid">
                     <button class="cal1">September</button>
