--- a/home.html
+++ b/home.html
@@ -22,23 +22,23 @@
                     <a href="list_movie.html">List Movie</a>
                 </div>
                 <div class="profile">
-                    <a onclick="click3()"><i id="button_search" class="fa fa-search" aria-hidden="true"></i></a>
+                    <a onclick="show_search()"><i id="button_search" class="fa fa-search" aria-hidden="true"></i></a>
                     <div class="search" id="search">
                         <i class="fa fa-search" aria-hidden="true"></i>
                         <input type="text" placeholder="Search...">
                     </div>
-                    <a onclick="click5()">
+                    <a onclick="show_menu_dekstop()">
                         <img class="profile" src="img/profile.png" alt="">
                     </a>
                 </div>
-                <a onclick="click()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                <a onclick="show_menu()"><i class="fa fa-bars" aria-hidden="true"></i></a>
             </div>
             <div class="nav-desktop" id="nav-desktop">
-                <a href="#" onclick="click6()">Profile</a>
+                <a href="#" onclick="hidden_menu_dekstop()">Profile</a>
                 <a href="index.html">Logout</a>
             </div>
         </header>
-        <nav id="nav" onclick="click2()">
+        <nav id="nav" onclick="hidden_menu()">
             <div>
                 <div>
                     <i class="fa fa-search" aria-hidden="true"></i>
@@ -120,8 +120,8 @@
             </section>
             <section class="content-3">
                 <div class="top">
-                    <h2>Upcoming Movie</h2>
-                    <a href="list_movie.html">view all</a>
+                    <a href="#">Home</a>
+                    <a href="list_movie.html">List Movie</a>
                 </div>
                 <div class="mid">
                     <button class="cal1">September</button>
@@ -241,26 +241,22 @@
     </div>
 </body>
 <script>
-    function click5() {
+    function show_menu_dekstop() {
         document.getElementById("search").style.display = "none";
         document.getElementById("button_search").style.display = "block";
         document.getElementById("nav-desktop").style.display = "flex";
     }
-    function click6() {
+    function hidden_menu_dekstop() {
         document.getElementById("nav-desktop").style.display = "none";
     }
-    function click4() {
-        document.getElementById("search").style.display = "none";
-        document.getElementById("button_search").style.display = "block";
-    }
-    function click3() {
+    function show_search() {
         document.getElementById("search").style.display = "block";
         document.getElementById("button_search").style.display = "none";
     }
-    function click2() {
+    function hidden_menu() {
         document.getElementById("nav").style.display = "none";
     }
-    function click() {
+    function show_menu() {
         document.getElementById("nav").style.display = "flex";
     }
 </script>
