--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <button class="signup"><a href="signup.html" style="flex-grow: 8;">Sign
                             Up</a></button>
                 </div>
-                <a onclick="myFunction()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                <a onclick="show_menu()"><i class="fa fa-bars" aria-hidden="true"></i></a>
             </div>
         </header>
-        <nav id="nav" onclick="myFunction2()">
+        <nav id="nav" onclick="hidden_menu()">
             <p><a class="nav-home" href="">Home</a></p>
             <p><a href="">List Movie</a></p>
             <p><a href="signin.html">Sign In</a></p>
@@ -224,10 +224,10 @@
     </div>
 </body>
 <script>
-    function myFunction2() {
+    function hidden_menu() {
         document.getElementById("nav").style.display = "none";
     }
-    function myFunction() {
+    function show_menu() {
         document.getElementById("nav").style.display = "flex";
     }
 </script>
