fix direct link menu

--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <p><a class="nav-home" href="">Home</a></p>
-            <p><a href="">List Movie</a></p>
+            <p><a href="list_movie.html">List Movie</a></p>
             <p><a href="signin.html">Sign In</a></p>
             <p><a href="index.html">Logout</a></p>
             <p class="cop">&copy; 2020 Tickitz. All Rights Reerved.</p>
