--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="right">
                 <div class="header-bar">
                     <a href="index.html">Home</a>
-                    <a href="index.html">List Movie</a>
+                    <a href="list_movie.html">List Movie</a>
                 </div>
                 <div>
                     <button class="signup"><a href="signup.html" style="flex-grow: 8;">Sign
@@ -29,8 +29,8 @@
             </div>
         </header>
         <nav id="nav" onclick="hidden_menu()">
-            <p><a class="nav-home" href="">Home</a></p>
-            <p><a href="">List Movie</a></p>
+            <p><a class="nav-home" href="index.html">Home</a></p>
+            <p><a href="list_movie.html">List Movie</a></p>
             <p><a href="signin.html">Sign In</a></p>
             <p class="cop">&copy; 2020 Tickitz. All Rights Reerved.</p>
         </nav>
